--- a/serverCody/lib/README
+++ b/serverCody/lib/README
@@ -1,4 +1,8 @@
 
+Для загрузки на устройство файлов (файлы должны находиться в папке "data") необходимо выполинть команду:
+pio run --target uploadfs
+
+
 This directory is intended for project specific (private) libraries.
 PlatformIO will compile them to static libraries and link into the executable file.
 
