LCD Keypad Shield

--- a/serverCody/src/README
+++ b/serverCody/src/README
@@ -33,48 +33,56 @@ std::vector<GpioPin> availableGpio = {
 
 // Список доступных GPIO для ESP32 UNO WROOM-1-N16R8
 std::vector<GpioPin> availableGpio = {
-    {2, "GPIO 2 (LED встроенный)"},
-    {4, "GPIO 4"},
-    {5, "GPIO 5"},
-    {12, "GPIO 12 (MTDI)"},
-    {13, "GPIO 13 (MTCK)"},
-    {14, "GPIO 14 (MTMS)"},
-    {15, "GPIO 15 (MTDO)"},
-    {16, "GPIO 16 (RXD2)"},
-    {17, "GPIO 17 (TXD2)"},
-    {18, "GPIO 18 (VSPI CLK)"},
-    {19, "GPIO 19 (VSPI MISO)"},
-    {21, "GPIO 21 (I2C SDA)"},
-    {22, "GPIO 22 (I2C SCL)"},
-    {23, "GPIO 23 (VSPI MOSI)"},
-    {25, "GPIO 25 (DAC1)"},
-    {26, "GPIO 26 (DAC2)"},
-    {27, "GPIO 27"},
-    {32, "GPIO 32 (ADC1_4)"},
-    {33, "GPIO 33 (ADC1_5)"},
-    {34, "GPIO 34 (ADC1_6, только вход)"},
-    {35, "GPIO 35 (ADC1_7, только вход)"},
-    {36, "GPIO 36 (ADC1_0, только вход)"},
-    {39, "GPIO 39 (ADC1_3, только вход)"}
+    {0, "GPIO 0 (Boot)"},
+    {2, "GPIO 2"},
+    {3, "GPIO 3"},
+    {10, "GPIO 10 (SPI CS)"},
+    {11, "GPIO 11 (SPI MOSI)"},
+    {12, "GPIO 12 (SPI MISO)"},
+    {13, "GPIO 13 (SPI CLK)"},
+    {14, "GPIO 14"},
+    {15, "GPIO 15"},
+    {16, "GPIO 16"},
+    {17, "GPIO 17"},
+    {18, "GPIO 18"},
+    {19, "GPIO 19"},
+    {20, "GPIO 20"},
+    {21, "GPIO 21"},
+    {35, "GPIO 35"},
+    {36, "GPIO 36 (I2C SCL)"},
+    {37, "GPIO 37 (I2C SDA)"},
+    {38, "GPIO 38"},
+    {39, "GPIO 39"},
+    {40, "GPIO 40"},
+    {41, "GPIO 41"},
+    {42, "GPIO 42"},
+    {43, "GPIO 43 (UART TX)"},
+    {44, "GPIO 44 (UART RX)"},
+    {45, "GPIO 45"},
+    {46, "GPIO 46"},
+    {47, "GPIO 47"},
+    {48, "GPIO 48"}
 };
-Важные замечания по GPIO для ESP32 UNO WROOM-1-N16R8:
-Пины только для входа (Input Only):
+При подключении LCD Keypad Shield к ESP32-S3 UNO WROOM-1-N16R8 используются следующие пины:
 
-GPIO 34, 35, 36, 39 могут использоваться только как входы и не имеют внутренних подтягивающих резисторов.
-Пины, которые следует избегать:
+LCD интерфейс: GPIO8, GPIO9, GPIO4, GPIO5, GPIO6, GPIO7
+Кнопки: GPIO1 (аналоговый вход A0)
+Свободные пины ESP32-S3 UNO:
+Цифровые пины:
 
-GPIO 0: используется для загрузки в режим прошивки (boot mode)
-GPIO 1 и 3: используются для UART0 (последовательный порт)
-GPIO 6-11: обычно подключены к SPI флеш-памяти
-Пины с особыми функциями:
+GPIO0 (D0)
+GPIO2, GPIO3 (D2, D3)
+GPIO10-GPIO21 (D10-D13, и другие пины, не имеющие прямого соответствия с Arduino UNO)
+GPIO35-GPIO48 (дополнительные пины ESP32-S3)
+Аналоговые входы:
 
-GPIO 2: подключен к встроенному светодиоду на большинстве плат
-GPIO 12: может вызвать проблемы при загрузке, если подтянут к HIGH
-GPIO 15: может вызвать проблемы при загрузке, если подтянут к HIGH
-Рекомендуемые пины для управления нагрузкой:
+GPIO2-GPIO7 (A1-A5) - обратите внимание, что некоторые из них уже используются для LCD (GPIO4-GPIO7)
+Другие ADC пины ESP32-S3
+Специальные пины:
 
-GPIO 25, 26, 27, 32, 33: наиболее безопасные пины для управления внешними устройствами
-GPIO 4, 5, 18, 19, 21, 22, 23: также хорошо подходят для управления
+I2C: GPIO37 (SDA), GPIO36 (SCL) - если не используются для других целей
+SPI: GPIO11 (MOSI), GPIO13 (MISO), GPIO12 (SCK), GPIO10 (SS) - если не используются для других целей
+UART: GPIO43 (TX), GPIO44 (RX) - если не используются для отладки
 
 This directory is intended for project specific (private) libraries.
 PlatformIO will compile them to static libraries and link into the executable file.
@@ -160,3 +168,89 @@ libraries by scanning project source files.
 
 More information about PlatformIO Library Dependency Finder
 - https://docs.platformio.org/page/librarymanager/ldf.html
+
+
+Общая информация
+LCD Keypad Shield имеет 6 кнопок:
+
+    Вверх (Up)
+    Вниз (Down)
+    Влево (Left)
+    Вправо (Right)
+    Выбор (Select)
+    Сброс (Reset) - аппаратная кнопка для перезагрузки ESP32-S3
+Навигация по меню
+Главный экран
+На главном экране отображается общая информация о системе и подключенных устройствах.
+
+    Влево/Вправо: Прокрутка информационного текста
+    Выбор: Переход к списку устройств
+    Сброс: Перезагрузка устройства
+Список устройств
+В этом режиме вы можете просматривать и выбирать устройства для настройки.
+
+    Вверх/Вниз: Переключение между устройствами
+    Выбор или Вправо: Переход в меню настройки выбранного устройства
+    Влево: Возврат на главный экран
+    Сброс: Перезагрузка устройства
+Меню настройки устройства
+Здесь вы можете выбрать параметр устройства для редактирования.
+
+  Вверх/Вниз: Переключение между пунктами меню:
+    Температура
+    GPIO пины
+    Вкл/Выкл
+    Назад
+  Выбор или Вправо: Выбор пункта меню для редактирования
+  Влево: Возврат к списку устройств
+  Сброс: Перезагрузка устройства
+Редактирование параметров
+Редактирование температуры
+В этом режиме вы можете изменить целевую температуру для выбранного устройства.
+
+    Вверх: Увеличение целевой температуры на 0.5°C
+    Вниз: Уменьшение целевой температуры на 0.5°C
+    Выбор или Влево: Сохранение изменений и возврат в меню устройства
+    Сброс: Перезагрузка устройства (изменения не сохранятся)
+Редактирование GPIO пинов
+Здесь вы можете выбрать GPIO пины для управления устройством.
+
+    Вверх/Вниз: Переключение между доступными GPIO пинами
+    Выбор: Выбор/отмена выбора текущего GPIO пина (отмечается как [X])
+    Влево или Вправо: Возврат в меню устройства (изменения сохраняются)
+    Сброс: Перезагрузка устройства (изменения не сохранятся)
+Включение/выключение устройства
+В этом режиме вы можете включить или выключить выбранное устройство.
+
+    Вверх/Вниз: Переключение между состояниями "Включено" и "Выключено"
+    Выбор или Влево: Сохранение изменений и возврат в меню устройства
+    Сброс: Перезагрузка устройства (изменения не сохранятся)
+Дополнительные функции
+Автоматическое обновление информации
+На главном экране информация о устройствах автоматически обновляется:
+
+    Текущая температура
+    Влажность
+    Уровень заряда батареи
+    Статус обогрева
+Циклическое отображение информации
+На главном экране каждые 5 секунд происходит переключение между:
+
+    Общей информацией
+    Информацией о температуре
+    Статистикой обогрева
+Советы по использованию
+    Сохранение изменений: Все изменения автоматически сохраняются при выходе из режима редактирования.
+
+    Проверка статуса: На главном экране можно быстро проверить статус всех устройств.
+
+    Отключение устройства: Если вы хотите временно отключить устройство, используйте опцию "Вкл/Выкл" вместо удаления GPIO пинов.
+
+    Сброс устройства: Если система работает некорректно, используйте кнопку Reset для перезагрузки.
+
+    Добавление новых устройств: Новые устройства добавляются через веб-интерфейс, доступный по IP-адресу, отображаемому на главном экране.
+
+Примечания
+    Если устройство не отвечает в течение длительного времени, оно будет отмечено как "Нет данных".
+    При отключении WiFi некоторые функции могут быть недоступны.
+    Изменения, внесенные через LCD интерфейс, синхронизируются с веб-интерфейсом и наоборот.
